--- a/facturas/ventana.glade
+++ b/facturas/ventana.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.3 -->
+<!-- Generated with glade 3.20.0 -->
 <interface>
   <requires lib="gtk+" version="3.12"/>
   <object class="GtkListStore" id="listcliente">
@@ -10,16 +10,28 @@
       <column type="gchararray"/>
       <!-- column-name nombre -->
       <column type="gchararray"/>
-      <!-- column-name mail -->
+      <!-- column-name telefono -->
       <column type="gchararray"/>
+    </columns>
+  </object>
+  <object class="GtkListStore" id="listproductos">
+    <columns>
+      <!-- column-name codigo -->
+      <column type="gint"/>
+      <!-- column-name nombre -->
+      <column type="gchararray"/>
+      <!-- column-name precio -->
+      <column type="gfloat"/>
+      <!-- column-name stock -->
+      <column type="gfloat"/>
     </columns>
   </object>
   <object class="GtkWindow" id="ventana">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">FACTURACION</property>
     <property name="window_position">center</property>
-    <property name="default_width">800</property>
-    <property name="default_height">600</property>
+    <property name="default_width">1024</property>
+    <property name="default_height">768</property>
     <property name="gravity">north</property>
     <signal name="destroy" handler="on_ventana_destroy" swapped="no"/>
     <child>
@@ -56,6 +68,7 @@
             <property name="margin_right">6</property>
             <property name="margin_top">4</property>
             <property name="margin_bottom">4</property>
+            <signal name="select-page" handler="on_notebook1_select_page" swapped="no"/>
             <child>
               <object class="GtkBox" id="box2">
                 <property name="visible">True</property>
@@ -359,6 +372,8 @@
                         <property name="height_request">250</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="margin_left">8</property>
+                        <property name="margin_right">8</property>
                         <property name="margin_top">8</property>
                         <property name="margin_bottom">8</property>
                         <property name="hexpand">True</property>
@@ -410,7 +425,7 @@
                         </child>
                         <child>
                           <object class="GtkTreeViewColumn" id="treeviewcolumn4">
-                            <property name="title" translatable="yes">MAIL</property>
+                            <property name="title" translatable="yes">TELÉFONO</property>
                             <property name="expand">True</property>
                             <child>
                               <object class="GtkCellRendererText" id="cellrenderertext4"/>
@@ -570,7 +585,7 @@
                         <property name="margin_right">5</property>
                         <property name="margin_top">5</property>
                         <property name="margin_bottom">5</property>
-                        <property name="yalign">0.52999997138977051</property>
+                        <signal name="clicked" handler="on_btnaltap_clicked" swapped="no"/>
                       </object>
                       <packing>
                         <property name="left_attach">0</property>
@@ -642,66 +657,43 @@
                     <property name="shadow_type">in</property>
                     <child>
                       <object class="GtkTreeView" id="treeproductos">
-                        <property name="height_request">280</property>
+                        <property name="height_request">250</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="margin_left">8</property>
+                        <property name="margin_right">8</property>
                         <property name="margin_top">8</property>
                         <property name="margin_bottom">8</property>
                         <property name="hexpand">True</property>
                         <property name="model">listproductos</property>
-                        <property name="search_column">0</property>
                         <property name="ubuntu_almost_fixed_height_mode">True</property>
-                        <property name="enable_grid_lines">both</property>
                         <child internal-child="selection">
-                          <object class="GtkTreeSelection" id="treeview-selection2"/>
+                          <object class="GtkTreeSelection"/>
                         </child>
                         <child>
-                          <object class="GtkTreeViewColumn" id="treeviewcolumn5">
-                            <property name="title" translatable="yes">Código</property>
+                          <object class="GtkTreeViewColumn">
+                            <property name="title" translatable="yes">Codigo</property>
                             <property name="expand">True</property>
-                            <child>
-                              <object class="GtkCellRendererText" id="cellrenderertext5"/>
-                              <attributes>
-                                <attribute name="text">0</attribute>
-                              </attributes>
-                            </child>
+                            <property name="reorderable">True</property>
                           </object>
                         </child>
                         <child>
-                          <object class="GtkTreeViewColumn" id="treeviewcolumn6">
-                            <property name="title" translatable="yes">Producto</property>
+                          <object class="GtkTreeViewColumn">
+                            <property name="title" translatable="yes">Nombre</property>
                             <property name="expand">True</property>
-                            <child>
-                              <object class="GtkCellRendererText" id="cellrenderertext6"/>
-                              <attributes>
-                                <attribute name="text">1</attribute>
-                              </attributes>
-                            </child>
+                            <property name="reorderable">True</property>
                           </object>
                         </child>
                         <child>
-                          <object class="GtkTreeViewColumn" id="treeviewcolumn7">
+                          <object class="GtkTreeViewColumn">
                             <property name="title" translatable="yes">Precio</property>
                             <property name="expand">True</property>
-                            <child>
-                              <object class="GtkCellRendererText" id="cellrenderertext7"/>
-                              <attributes>
-                                <attribute name="text">2</attribute>
-                              </attributes>
-                            </child>
                           </object>
                         </child>
                         <child>
-                          <object class="GtkTreeViewColumn" id="treeviewcolumn8">
-                            <property name="sizing">autosize</property>
+                          <object class="GtkTreeViewColumn">
                             <property name="title" translatable="yes">Stock</property>
                             <property name="expand">True</property>
-                            <child>
-                              <object class="GtkCellRendererText" id="cellrenderertext8"/>
-                              <attributes>
-                                <attribute name="text">3</attribute>
-                              </attributes>
-                            </child>
                           </object>
                         </child>
                       </object>
@@ -792,17 +784,5 @@
         </child>
       </object>
     </child>
-  </object>
-  <object class="GtkListStore" id="listproductos">
-    <columns>
-      <!-- column-name id -->
-      <column type="gint"/>
-      <!-- column-name producto -->
-      <column type="gchararray"/>
-      <!-- column-name precio -->
-      <column type="gfloat"/>
-      <!-- column-name stock -->
-      <column type="gfloat"/>
-    </columns>
   </object>
 </interface>
